--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 container-element website-width selected"><div data-silex-type="html-element" class="editable-style html-element silex-id-1639155605711-1 page-page-1 paged-element paged-element-visible"><div class="silex-element-content"><h1>My Coding Website</h1>
 <h5>Currently Under Development</h5>
 <p>Feel free to post snippets of code into the Padlet down below!</p>
+<samp>CODING IS FUN</samp>
 <div class="padlet-embed" style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F4"><p style="padding:0;margin:0"><iframe src="https://padlet.com/padlets/e7wt5ncdmtjvh526" frameborder="0" allow="camera;microphone;geolocation" style="width:100%;height:608px;display:block;padding:0;margin:0"></iframe></p><div style="padding:8px;text-align:right;margin:0;"><a href="https://padlet.com?ref=embed" style="padding:0;margin:0;border:none;display:block;line-height:1;height:16px" target="_blank"><img src="https://resources.padletcdn.com/assets/made_with_padlet.png" width="86" height="16" style="padding:0;margin:0;background:none;border:none;display:inline;box-shadow:none" alt="Made with Padlet"></a></div></div></div></div></div>
     </section>
     <section data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element prevent-resizable" style="">
